<resources>
    <string name="app_name">snrProj</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_activity_main_maps">Map</string>
    <string name="prof_details">Profile Details</string>
    <string name="user_name">name</string>
    <string name="profile">Your Profile</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="edit_profile">edit profile</string>
    <string name="sign_out">sign out</string>
    <string name="exit">exit</string>
    <string name="profile_image">profile image</string>
    <string name="update_name">update name</string>
    <string name="update_email">update email</string>
    <string name="jober">jober</string>
    <string name="sign_in">sign in</string>
    <string name="request_job">request job</string>
    <string name="navigation">navigation</string>
    <string name="title">title</string>
    <string name="type">type</string>
    <string name="pay">pay</string>
    <string name="description">description</string>
    <string name="description_hint">description\n\n\n</string>
    <string name="set_loc">set location</string>
    <string name="post_job">post job</string>
    <string name="rating">rating</string>
    <string name="star">⋆</string>
    <string name="your_jobs">your jobs</string>
    <string name="date">date</string>
    <string name="requested">requested</string>
    <string name="completed">completed</string>
    <string name="accepted">accepted</string>
    <string name="job_details">job details</string>
    <string name="partner_desc">Job with partner</string>
    <string name="select_loc">select location</string>
</resources>
