<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/job_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:layout_marginLeft="-16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/gradient_background">

            <TextView
                android:id="@+id/job_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/job_details"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/color_text"
                android:textSize="30sp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/jobDetails_back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/black_back_button" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!-- change context to different behavior class -->
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:context=".MainMapsActivity" />

    <RelativeLayout
        android:id="@+id/job_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/title"
                android:textColor="@color/color_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/job_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/date"
                android:textColor="@color/color_text"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/job_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/description"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="13sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/job_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/pay"
            android:textColor="@color/color_text"
            android:textSize="13sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/job_partner_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:id="@+id/partner_picture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_image"
            android:scaleType="fitCenter"
            android:src="@drawable/default_image" />

        <TextView
            android:id="@+id/partner_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/partner_desc"
            android:textColor="@color/color_text" />

    </LinearLayout>


</LinearLayout>