<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/request_job_fragment"
    android:background="@color/background" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/editProfTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/request_job"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/color_text"
            android:textSize="30sp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/exit_button"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/exit"
            android:elevation="12dp"
            android:background="@drawable/exit_button" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/title"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/title_et"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/title"
                android:paddingStart="10dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/browser_actions_title_color" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/type"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/type"
                android:background="@color/white"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/pay_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/pay"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pay_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/pay"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/color_text"
                android:textColorHint="@color/browser_actions_title_color" />

            <TextView
                android:id="@+id/desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/description"
                android:textColor="@color/browser_actions_title_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/desc_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:lines="4"
                android:paddingStart="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/color_text"
                android:textColorHint="@color/browser_actions_title_color" />

            <Button
                android:id="@+id/set_loc_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_gradient_background"
                android:fontFamily="@font/architects_daughter"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/set_loc"
                android:textAlignment="center"
                android:textColor="@color/color_text"
                android:textSize="18sp" />

            <Button
                android:id="@+id/post_job"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_gradient_background"
                android:enabled="false"
                android:fontFamily="@font/architects_daughter"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/post_job"
                android:textAlignment="center"
                android:textColor="@color/color_text"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>