<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_page"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/jober_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/jober"
        android:textColor="@color/color_text"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/signin_firstline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:background="@color/browser_actions_title_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/sign_in"
            android:textColor="@color/browser_actions_title_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:id="@+id/signin_secondline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/browser_actions_title_color" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/browser_actions_title_color" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/color_text"
        android:textColorHint="@color/browser_actions_title_color" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_gradient_background"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/sign_in"
        android:textSize="18sp" />

    <View
        android:id="@+id/horiz_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@color/browser_actions_title_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/not_a_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/new_user"
            android:textColor="@color/browser_actions_title_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>