<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/update_email_fragment" >

    <ImageView
        android:id="@+id/exit_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:contentDescription="@string/exit"
        android:elevation="12dp"
        android:src="@drawable/exit_button" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/email"
            android:textColor="@color/browser_actions_title_color"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/architects_daughter"
            android:inputType="text"
            android:text="@string/email"
            android:textColor="@color/color_text"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:padding="12dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/clear_text" />

    </RelativeLayout>

    <Button
        android:id="@+id/update_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/gradient_background"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/update_email"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
